Hide .ui-datepicker-month and fix Start/End date clear button alignment

--- a/ckanext/aridhia/public/base/less/forms.less
+++ b/ckanext/aridhia/public/base/less/forms.less
@@ -51,8 +51,7 @@ textarea {
 }
 
 .control-group .btn {
-  position: relative;
-  top: -2px;
+  top: 0;
 }
 
 .control-full input,
@@ -977,6 +976,7 @@ textarea {
 
 }
 
-.ui-datepicker-calendar {
+.ui-datepicker-calendar,
+.ui-datepicker-month{
   display: none;
 }
